--- a/templates/webstore/product/product_list_item.html
+++ b/templates/webstore/product/product_list_item.html
@@ -6,15 +6,19 @@
         {% else %}
             <img src={% static 'images/default.png' %}>
         {% endif %}
-        <span class="card-title black-text">{{object.name}}</span>
+        <span class="card-title {% if object.is_promo %}red-text{% else %}black-text{% endif %}">
+            {{object.name}}
+        {% if object.is_promo %}
+            <h5 style="color:red;">Bargain: {{ object.promo_message }}</h5>
+        {% endif %}</span>
         <a href="{% url 'cart:quick-add-item' object.id %}"
            class="btn-floating halfway-fab waves-effect waves-light red quick-add-item">
            <i class="material-icons">add_shopping_cart</i>
         </a>
     </div>
     <div class="card-content">
-        <p>Price: <span {% if object.is_promo %}style="color:red;"{% endif %}>{{ object.price }}</span></p>
-        {% if object.is_promo %} {{ object.promo_message }} {% endif %}
+        
+        <p {% if object.is_promo %}style="color:red;"{% endif %}>Price: <span>{{ object.price }}</span></p>
         <a href="{% url 'product:product-detail' object.slug %}">
             <button class="btn small" style="width:100%;">details</button>
         </a>
