--- a/templates/dashboard/delivery/delivery_option_update.html
+++ b/templates/dashboard/delivery/delivery_option_update.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="row">
         <div class="col s12">
-            <div class="card">
+            <div class="card-panel">
                 <form action="" method="POST">
                     {% csrf_token %}
                     {{ form.as_p }}
