--- a/templates/dashboard/product/product_update.html
+++ b/templates/dashboard/product/product_update.html
@@ -12,6 +12,7 @@
         <form action="" method="post">
             {% csrf_token %}
             {{ form.errors }}
+            {{ form.non_field_errors }}
             <div class="cart-content ">
                 <div class="row">
                     <div class="input-field col m6 s12 xs12">
